Version 1pl5 - released 2014-09-04
* fixed bug, where absolute URLs could have been faulty (reported by Termin)
* fixed bug, where mkdir() was called without subsequent chmod()
* fixed bug, where news feed was not regenerated when saving the News tab under
  CMSimple_XH 1.6+
* revised manuals
* added version.nfo
* added metaconfig.php and support for other CMSimple_XH 1.6 APIs
* added missing alt texts

Version 1pl4 - released 2013-04-19
* fix bug, where feed icon file was reported as undefined, if set in
  configuration
* extended copyright to 2013

Version 1pl3 - released 2012-09-23
* updated Czech translation and added Czech README and manual (contributed by
  oldnema)

Version 1pl2 - released 2012-09-05
* fixed bug where saving of the language settings corrupted the file (reported
  by schteff)
* fixed bug where XHTML special chars were not properly escaped in the RSS feed
  (reported by schteff)
* added config option html_markup to allow to write plain text in the
  description
* fixed bug where newsreaders might not show changed items

Version 1pl1 - released 2012-04-27
* fixed bug: the URL to the feed icon was wrong for subsites/second languages
* added czech translation (contributed by oldnema)
* updated slovak translation (contributed by Tata)
* updated danish translation (contributed by maeg)
* made minor improvements

Version 1 - released 2012-03-05
* added Slovak translation (contributed by Tata)
* extended copyright
* added plugin icon
* updated manual accordingly
* made minor cosmetic changes
* added defaultconfig.php

Version 1rc1 - released 2011-12-25
* added Danish translation (provided by maeg)
* switched from implicit requirements check to explicit system check
* made minor corrections and improvements
* added title to "read more" link
* updated manual accordingly
* changed config option "feed enabled" from yes/no to 1/0
* added german translation
* translated manual to german
* added translation hints